--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -1,5 +1,12 @@
 <a class="skip-navigation" tabindex="1" href="#main-content">{{t 'skip_navigation' }}</a>
 
+ {{!-- <div style="width: 800px; margin:auto;">
+ <div id="searchbox">
+ <div class="CoveoSearchbox" data-enable-omnibox="true">
+ </div>
+ </div>
+ </div> --}}
+
 <header>
   <div class="container header">
     <div class="logo">
