--- a/templates/category_page.hbs
+++ b/templates/category_page.hbs
@@ -3,11 +3,9 @@
   <nav class="sub-nav">
     {{breadcrumbs}}
     <div class="search-container">
-      <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" focusable="false" viewBox="0 0 12 12" class="search-icon">
-        <circle cx="4.5" cy="4.5" r="4" fill="none" stroke="currentColor"/>
-        <path stroke="currentColor" stroke-linecap="round" d="M11 11L7.5 7.5"/>
-      </svg>
-      {{search scoped=settings.scoped_kb_search submit=false placeholder="Looking for something specific?"}}
+      <div id="searchbox">
+        <div class="CoveoSearchbox categoryPageSearch" data-enable-omnibox="false">
+      </div>
     </div>
   </nav>
 </div>
@@ -17,7 +15,7 @@
     <div class="category-hero">
       <div class="category-hero-description-div">
         <h1 style="margin-bottom:0px; font-size:3vh">{{category.name}}</h1>
-        <p style="color: #6e6e6e; font-weight:400; font-size:2.1vh; margin: 10px;">{{category.description}}</p>
+        <p style="color: #6e6e6e; font-weight:400; font-size:18px; margin: 10px;">{{category.description}}</p>
         <a
           id="{{category.id}}"
           class="supportToolsLink"
