--- a/templates/home_page.hbs
+++ b/templates/home_page.hbs
@@ -9,11 +9,16 @@
   </div>
   <div class="hero-inner">
     <h2 class="visibility-hidden">{{ t 'search' }}</h2>
-    <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" focusable="false" viewBox="0 0 12 12" class="search-icon" aria-hidden="true">
+    {{!-- <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" focusable="false" viewBox="0 0 12 12" class="search-icon" aria-hidden="true">
       <circle cx="4.5" cy="4.5" r="4" fill="none" stroke="currentColor"/>
       <path stroke="currentColor" stroke-linecap="round" d="M11 11L7.5 7.5"/>
-    </svg>
-    {{search submit=false placeholder='Looking for something specific?' class='search search-full'}}
+    </svg> --}}
+     <div id="searchbox">
+       <div class="CoveoSearchbox" data-enable-omnibox="true">
+    {{!-- {{search submit=false placeholder='Looking for something specific?' class='search search-full'}} --}}
+
+      </div>
+    </div>
   </div>
 </section>
 
