--- a/style.css
+++ b/style.css
@@ -5406,7 +5406,7 @@ code[class*="language-"] {
 }
 
 /***** Custom alert formatting *****/
-p.success, p.warning, p.info, p.error {
+p.success, p.warning, p.info, p.error, p.warning_banner {
 	padding:10px 20px 10px 10px;
 	margin-top:15px;
   margin-bottom:15px;
@@ -5416,7 +5416,7 @@ p.success, p.warning, p.info, p.error {
   border-radius: 4px;
 }
 
-p.success:before, p.warning:before, p.info:before, p.error:before  {
+p.success:before, p.warning:before, p.info:before, p.error:before {
 	float: left;
   padding-right:15px;
   margin-top: 3px;
@@ -5438,6 +5438,12 @@ p.warning {
 }
 p.warning:before {
 	content: url("$assets-icon-warning-svg");
+}
+
+p.warning_banner {
+	background-color: #fbedda;
+	border: #c1741b solid 1px;
+	color:#c1741b;
 }
 
 p.error {
