--- a/templates/category_page.hbs
+++ b/templates/category_page.hbs
@@ -17,7 +17,7 @@
     <div class="category-hero">
       <div class="category-hero-description-div">
         <h1 style="margin-bottom:0px; font-size:3vh">{{category.name}}</h1>
-        <p style="color: #6e6e6e; font-weight:400; font-size:2.1vh; margin: 10px;">{{category.description}}</p>
+        <p style="color: #6e6e6e; font-weight:400; font-size:20px; margin: 10px;">{{category.description}}</p>
         <a
           id="{{category.id}}"
           class="supportToolsLink"
