Updated search page

--- a/templates/search_results.hbs
+++ b/templates/search_results.hbs
@@ -9,16 +9,12 @@
       <div class="CoveoFolding"></div>
       <div class="CoveoAnalytics"></div>
       <div class="coveo-search-section">
-        <div class="CoveoSearchbox" data-enable-omnibox="true"></div>
+        <div class="CoveoSearchbox" data-enable-omnibox="true" ></div>
       </div>
       <div class="coveo-main-section">
         <div class="coveo-facet-column">
-          <div
-            class="CoveoDynamicFacet"
-            data-title="Type"
-            data-field="@objecttype"
-            data-tab="All"
-          ></div>
+          <div class="CoveoDynamicFacet" data-title="File Type" data-field="@filetype" data-tab="All" data-number-of-values=""></div>
+          <div style="margin-top: 10px" class="CoveoDynamicFacet" data-title="Keywords" data-field="@concepts"></div>
         </div>
         <div class="coveo-results-column">
           <div class="CoveoShareQuery"></div>
