--- a/assets/coveo.css
+++ b/assets/coveo.css
@@ -75,6 +75,11 @@
     align-self: flex-start !important;
 }
 
+.CoveoSearchInterface .coveo-results-column.coveo-no-results {
+    margin: 0 0 0 28% !important;
+}
+
 /* .CoveoSearchbox .CoveoSearchButton {
     max-height: 36px !important;
+    
 } */
