--- a/templates/new_request_page.hbs
+++ b/templates/new_request_page.hbs
@@ -3,16 +3,21 @@
   <nav class="sub-nav">
     {{breadcrumbs}}
   </nav>
-<div class="temporary_banner"><span class = "banner_heading">Data Privacy Notice</span><span class="banner_close_btn">&times;</span><br>Adobe technical support may require access to your Adobe Commerce related data in order to provide support. The primary Adobe Commerce account holder can choose to provide this authorization in their Adobe Commerce account privacy settings. Allowing this access prior to  support request creation will help ensure the issue can be properly investigated and/or help increase the speed of resolution.<br>For more information, please visit: <a href='https://support.magento.com/hc/en-us/articles/360052293411' target='_blank'>https://support.magento.com/hc/en-us/articles/360052293411</a></div>
+  <div class="temporary_banner">
+    <span class = "banner_heading">Data Privacy Notice</span><span class="banner_close_btn">&times;</span><br>Adobe technical support may require access to your Adobe Commerce related data in order to provide support. The primary Adobe Commerce account holder can choose to provide this authorization in their Adobe Commerce account privacy settings. Allowing this access prior to  support request creation will help ensure the issue can be properly investigated and/or help increase the speed of resolution.<br>For more information, please visit: <a href='https://support.magento.com/hc/en-us/articles/360052293411' target='_blank'>https://support.magento.com/hc/en-us/articles/360052293411</a>
+  </div>
   <h1>
     {{t 'submit_a_request'}}
     <span class="follow-up-hint">
       {{follow_up}}
     </span>
   </h1>
-
-  <div id="main-content" class="form">
-    {{request_form wysiwyg=true}}
+  <div id="main-content" style="display:flex;">
+    <div style="flex: 50%;" class="form">
+      {{request_form wysiwyg=true}}
+    </div>
+    <CoveoCaseDeflection style="flex: 50%">
+    </CoveoCaseDeflection>
   </div>
 </div>
 
@@ -20,3 +25,4 @@
 $("body").addClass("no-subfooter");
 $(".submit-a-request").addClass("hide");
 </script>
+
