--- a/templates/new_request_page.hbs
+++ b/templates/new_request_page.hbs
@@ -1,4 +1,5 @@
 <div class="container-divider"></div>
+<div id="searchbox"></div>
 <div class="container">
   <nav class="sub-nav">
     {{breadcrumbs}}
@@ -13,10 +14,12 @@
     </span>
   </h1>
   <div id="main-content" style="display:flex;">
-    <div style="flex: 50%;" class="form">
+    <div style="flex: 50%; margin-right:30px" class="form">
       {{request_form wysiwyg=true}}
     </div>
-    <CoveoCaseDeflection style="flex: 50%">
+    <CoveoCaseDeflection style="flex: 50%; margin-top:18px">
+      <h2 style="margin-bottom: 5px;">Suggested Articles</h2>
+      <p style="margin: 5px 0 5px 0 ;">Based on your input and browsing, here are some articles we think can solve your issue.</p>
     </CoveoCaseDeflection>
   </div>
 </div>
