--- a/templates/new_request_page.hbs
+++ b/templates/new_request_page.hbs
@@ -15,11 +15,13 @@
   </h1>
   <div id="main-content" style="display:flex;">
     <div style="flex: 50%; margin-right:30px" class="form">
-      {{request_form wysiwyg=true}}
+      {{request_form}}
     </div>
     <CoveoCaseDeflection style="flex: 50%; margin-top:18px">
-      <h2 style="margin-bottom: 5px;">Suggested Articles</h2>
-      <p style="margin: 5px 0 5px 0 ;">Based on your input and browsing, here are some articles we think can solve your issue.</p>
+      <div class="case-deflection-text">
+        <h2 style="margin-bottom: 5px;">Suggested Articles</h2>
+        <p style="margin: 5px 0 5px 0 ;">Based on your input and browsing, here are some articles we think can help solve your issue.</p>
+      </div>
     </CoveoCaseDeflection>
   </div>
 </div>
