--- a/templates/article_page.hbs
+++ b/templates/article_page.hbs
@@ -38,7 +38,7 @@
 
     <article id="main-content" class="article article-card-container">
       <p class="migration-banner">
-        This page has <a id="exl-redirect-link" href='' target="_blank">moved</a> and will be redirected soon.
+        This page <a id="exl-redirect-link" href='' target="_blank">has moved to Adobe Experience League</a> and will be redirected soon.
       </p>
       <header class="article-header">
         <h1 title="{{article.title}}" class="article-title">
@@ -50,7 +50,6 @@
             </svg>
           {{/if}}
         </h1>
-
         <div class="article-author">
           <div class="article-meta">
             <ul class="meta-group">
