Updated exl redirect messaging, removed coveo loading logo

--- a/assets/coveo.css
+++ b/assets/coveo.css
@@ -117,3 +117,7 @@ coveocasedeflection {
 .CoveoSearchInterface {
     font-family: adobe-clean, sans-serif !important ;
 }
+
+.coveo-first-loading-animation {
+    display: none !important;
+}
