--- a/style.css
+++ b/style.css
@@ -5559,7 +5559,8 @@ code[class*="language-"], pre[class*="language-"] {
 .extension.admin>div:first-child:before,
 .extension.availability>div:first-child:before,
 .extension.prerequisites>div:first-child:before,
-.extension.info>div:first-child:before{
+.extension.info>div:first-child:before,
+.extension.note>div:first-child:before{
   content: "";
   background: url("$assets-icon-exl-info-svg") no-repeat center;
   background-size: cover;
@@ -5570,7 +5571,7 @@ code[class*="language-"], pre[class*="language-"] {
   margin-right: .25rem;
 }
 
-.extension.tip, .extension.admin, .extension.availability, .extension.prerequisites, .extension.info {
+.extension.tip, .extension.admin, .extension.availability, .extension.prerequisites, .extension.info, .extension.note {
   border-color: #0469e3;
 }
 
